src/components/SearchBar.css
.SearchBar {
  padding: 0;
  display: flex;
  flex-flow: row;
  align-items: stretch;
  position: relative;
}

.SearchBar_input {
  background-color: #def0cc;
  border: 2px solid transparent;
  padding: 10px 10px 10px 34px;
  border-radius: 12px;
  width: 100%;
  font-size: 13px;
}

.SearchBar_divider {
  display: block;
  height: 16px;
  border-left: 3px dotted white;
  margin-left: 19px;
}

.SearchBar_inputContainer {
  position: relative;
}

.SearchBar_icon {
  position: absolute;
  top: 10px;
  left: 8px;
}

.SearchBar_input:focus {
  background-color: #fff;
  outline: none;
  border: 2px solid #ffd18e;
}

.SearchBar_backButton {
  background: none;
  width: 48px;
  height: 48px;
  display: block;
  border: 0;
  color: #ffd18e;
  margin-left: -24px;
  margin-top: -8px;
}

.SearchBar_backIcon path {
  stroke-width: 3px;
}

.SearchBar_inputs {
  flex-grow: 1;
}

